# waveshare-esp32-p4-swift

./: .cursorrules  .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
main/: BridgingHeader.h  CMakeLists.txt  main.swift  putchar.c
